Fixing global dimmer on mail load
Loading dimmer was covering the entire UI resulting is a blocking event when the user first opens the app

--- a/atkomail-client/src/Mailbox.css
+++ b/atkomail-client/src/Mailbox.css
@@ -11,3 +11,7 @@
 .ui.modal > .actions {
     text-align: center !important;
 }
+
+#innerDimmer{
+    position: unset !important;
+}
